kubernetes/05-gitlab/gitlab-statefulset.yml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: gitlab
spec:
  replicas: 1
  serviceName: gitlab
  template:
    metadata:
      labels:
        name: gitlab
    spec:
      containers:
      - name: gitlab
        image: us.gcr.io/quassel-chibifire/gitlab:9.1.4
        ports:
        - name: http
          containerPort: 80
        - name: ssh
          containerPort: 22
        volumeMounts:
        - mountPath: /home/git/data
          name: data
        livenessProbe:
          httpGet:
            path: /help
            port: 80
          initialDelaySeconds: 180
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /help
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 1
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 60Gi
