kubernetes/05-gitlab/gitlab-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - spark.apps.chibifire.com
    - git.apps.chibifire.com
    - mattermost.apps.chibifire.com
    secretName: spark-gitlab-tls
  rules:
  - host: spark.apps.chibifire.com
    http:
      paths:
      - path: /
        backend:
          serviceName: gitlab
          servicePort: 80
  - host: git.apps.chibifire.com
    http:
      paths:
      - path: /
        backend:
          serviceName: gitlab
          servicePort: 2222
  - host: mattermost.apps.chibifire.com
    http:
      paths:
      - path: /
        backend:
          serviceName: gitlab
          servicePort: 80
